default/codimd/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: codimd
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
    - host: "codimd.tristan.moe"
      http:
        paths:
          - backend:
              serviceName: codimd
              servicePort: 80
  tls:
    - hosts:
        - "codimd.tristan.moe"
      secretName: le-cert-codimd
